[package]
name = "opt300x-async"
version = "0.1.0" # remember to update html_root_url
authors = ["Ardelean Călin-Petru <ardelean.calin@outlook.com>"]
repository = "https://github.com/Ardelean-Calin/opt300x-rs-async"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the OPT300x ambient light sensors. Compatible with OPT3001, OPT3002, OPT3004, OPT3006 and OPT3007"
readme = "README.md"
keywords = ["async", "light", "sensor", "als", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
homepage = "https://github.com/Ardelean-Calin/opt300x-rs-async"
documentation = "https://docs.rs/opt300x-async"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = "0.2.7"
embedded-hal-async = "0.2.0-alpha.0"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.8"

[profile.release]
lto = true
